--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -46,7 +46,7 @@
     display: flex;
     height: 60%;
     width: 70%;
-    margin-top: 10px;
+    margin-top: 5px;
     background-color: #262626;
     flex-direction: row;
     align-items: center;
@@ -54,6 +54,7 @@
 
 .day{
     width: 14%;
+    height: 17%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,7 +68,7 @@
 
 .active-day {
     width: 100%;
-    height: 75%;
+    height: 85%;
     text-align: center;
     background-color: #F2E7DC;
     border-radius: 8px;
@@ -75,5 +76,9 @@
 }
 
 .weekend{
-    color: #038C7F;
+    color: #A9D9D0;
+}
+
+.exceptMonth{
+    color: #A1A2A6;
 }
